--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -22,6 +22,17 @@ header nav form{
     margin-right: 20px;
 }
 
+header nav form input{
+    border-radius: 5px;
+}
+
+
+header nav form input[type="submit"]{
+    background: green;
+    border: 1px solid black;
+
+}
+
 header nav ul li{
     color: white;
     display: inline-block;
@@ -30,4 +41,52 @@ header nav ul li{
 
 #logo{
     margin-top: -150px;
+}
+#seccion01{
+    margin-top: 15px;
+}
+
+#seccion01 article{
+    text-align: center;
+}
+
+#seccion01 article img{
+    border: 5px solid rgba(150,150,150,0.5);
+    width: 98%;
+}
+
+#seccion02 article{
+    display: inline-block;
+    width: 33%;
+    vertical-align: top;
+}
+
+#seccion02 article input[type="submit"]{
+    background: white;
+    color: blue;
+    border-radius: 5px;
+    padding: 5px 15px;
+    margin-left: 30%;
+}
+
+footer{
+    margin-top: 20px;
+    background: black;
+}
+
+footer article{
+    width: 33%;
+    display: inline-block;
+    color: white;
+    padding: 30px;
+}
+
+.otraSeccion{
+    font-size: 2.5em;
+}
+.unaSeccion{
+    font-size: 4.5em;
+}
+.nito{
+   font-weight: bold;
 }
